2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuRoot):
	do not strip whitespace from menu names when creating a new menu

2004-04-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	(CMD_GotoDesk):
	(CMD_MoveToDesk):
	fixed MoveToDesk with one argument

2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_frame_attributes):
	fixed BackingStore code and removed now useless backing store for
	decorations

2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:
	set version to 2.4.19
	released 2.4.18

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.17

2004-02-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(moveLoop):
	fixed the FlickeringMoveWorkaround option which did nothing before

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* NEWS:
	set the version to 2.4.18

2003-10-10  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	documented fvwm-menu-headlines changes

	* NEWS:
	* docs/ANNOUNCE:
	* docs/fvwm.lsm.in:
	* fvwm/fvwm2.1:
	prepare for 2.4.17

2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (MoveViewport):
	do not broadcast M_NEW_PAGE if the page did not change

2003-09-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	fixed error message for incorrect --with-SOMETHING-library argument

2003-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	StartsOnPage + SkipMapping overrides PPosition

2003-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (do_move_window_to_desk):
	(UnmapDesk):
	fixed "Visible" condition on non current desks

2003-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	new configure option --deisable-gtk to disable detection of gtk library

2003-06-17  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/builtins.c (ReadDecorFace): Off by one patch from Anil
	Madhavapeddy.

2003-06-10  Dominik Vogt  <dominik.vogt@gmx.de>
