@@ -1,3 +1,9 @@
+2004-05-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/functions.c (CheckActionType):
+	(execute_complex_function):
+	double clicks no longer work when pressing different buttons
+
 2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (NewMenuRoot):
